Fix borderRadius style flash for avatars on Safari; Update AppFooter links, slightly modify source (render logic); Fix OurServices carousel ish on Landing; Fix some rendering bug in LazyBox component; Fix clipping SVG's in Safari.

--- a/src/styles/shared/_Avatar.scss
+++ b/src/styles/shared/_Avatar.scss
@@ -3,7 +3,7 @@
 
   width: $size;
   height: $size;
-  overflow: hidden;
+  // overflow: hidden;
   border-radius: 1rem; // for browser support
   border-radius: clamp(0.25em, 10%, 1em) !important;
   display: inline-flex;
@@ -26,6 +26,7 @@
     transition: transform 0.3s, opacity 0.5s;
     object-fit: cover;
     position: absolute;
+    border-radius: inherit;
     object-position: center;
   }
 
@@ -121,6 +122,7 @@
     opacity: 0.8;
     pointer-events: none;
     position: absolute;
+    border-radius: inherit;
     top: 0;
 
     &.has-loaded {
